--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Inconsolata:wght@200..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -15,7 +16,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-  --background: #0a0a0a;
+  --background: #0871F7;
     --foreground: #ededed;
   }
 }
