--- a/my-app/src/app/quizHome.module.css
+++ b/my-app/src/app/quizHome.module.css
@@ -1,30 +1,42 @@
 .container {
-    min-height: 100vh;
-    background: url("/bg-home.svg");
+    width: 100vw;
+    height: 100vh;;
+    position: relative;
+
+}
+
+.container::before {
+    background-image: url("/bg-home.svg");
+    background-repeat: no-repeat;
     background-size: cover;
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    opacity: 0.4;
+}
+
+.content {
+    height: 100%;
+    width: 100%;
+    isolation: isolate;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header {
-    font-size: 2rem;
-    font-weight: 800;
-}
-
-.subheader {    
-    font-size: 1.25em;
-}
-
-.playBtn {
-    margin-top: 20px;
-    padding: 15px 20px;
-    background-color: #307DE7;
-}
-
-.titleScreen {
-    width: 45vw;
-    position: fixed;
-    top: 50%;
-    transform: translateY(-50%);
+    min-width: 100%;
     text-align: center;
-} 
+    padding: 30px;
+}
+
+.title {
+    font-size: 4rem;
+    font-weight: 500;
+}
+
+.subtitle {    
+    font-size: 1rem;
+}
