added quiz page. Fixed some styling

--- a/my-app/src/app/quizHome.module.css
+++ b/my-app/src/app/quizHome.module.css
@@ -2,10 +2,10 @@
     width: 100vw;
     height: 100vh;;
     position: relative;
-
 }
 
 .container::before {
+    background-color: white;
     background-image: url("/bg-home.svg");
     background-repeat: no-repeat;
     background-size: cover;
